WIP removed pkg/enrober.
